Set a new height for clubs -Prevent overflow

--- a/style.css
+++ b/style.css
@@ -372,8 +372,7 @@ input:-webkit-autofill:focus {
 }
 
 .onlyUseWholeScreen{
-  min-height: 100%;
-  max-height: 100%;
+  height: 125%;/*needs to cover longest club*/
 }
 
 /**
@@ -386,7 +385,7 @@ input:-webkit-autofill:focus {
 }
 
 .anlge-bg {
-    //background: url('cafeteria.png') no-repeat scroll center bottom -140px / 100% auto;
+    /*background: url('cafeteria.png') no-repeat scroll center bottom -140px / 100% auto;*/
 }
 
 .overlay {
@@ -471,7 +470,7 @@ input:-webkit-autofill:focus {
 .caption-slider .carousel-indicators li {
     float: left;
     padding-top: 20px;
-    padding-right: 1.5em;//adjust if clubs are added
+    padding-right: 1.5em;/*adjust if clubs are added*/
     cursor: pointer;
     position: relative;
     list-style: none;
@@ -655,11 +654,11 @@ input:-webkit-autofill:focus {
 ***/
 
 .course-area {
-    //background: #75cbe7;
-    //background: -webkit-gradient(linear, left top, left bottom, from(#75cbe7), to(#138fc2));
-    //background: linear-gradient(to bottom, #75cbe7 0%, #138fc2 100%);
-    //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#75cbe7', endColorstr='#138fc2', GradientType=0);
-    background-image:  url("Courses-Background.png");
+    /*background: #75cbe7;
+    background: -webkit-gradient(linear, left top, left bottom, from(#75cbe7), to(#138fc2));
+    background: linear-gradient(to bottom, #75cbe7 0%, #138fc2 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#75cbe7', endColorstr='#138fc2', GradientType=0);
+    background-image:  url("Courses-Background.png");*/
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
